--- a/microservice/package.json
+++ b/microservice/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^4.3.3",
+    "elasticsearch": "^15.4.1",
     "event-stream": "^4.0.1",
+    "express": "^4.16.4",
     "googleapis": "^37.2.0",
     "http-debug": "^0.1.2",
-    "rxjs": "^6.4.0",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "object-hash": "^1.3.1",
+    "rxjs": "^6.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
