--- a/microservice/package.json
+++ b/microservice/package.json
@@ -4,7 +4,8 @@
   "description": "Scrape for bank statements",
   "main": "app/index.js",
   "scripts": {
-    "test": "mocha --timeout 15000 --recursive test"
+    "test": "mocha --timeout 15000 --recursive test",
+    "start": "node app/Server.js"
   },
   "author": "Joseph Okharedia",
   "license": "ISC",
