--- a/pod-jenkins-slave-template.yaml
+++ b/pod-jenkins-slave-template.yaml
@@ -2,16 +2,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    app: jenkins-slave
+    name: jenkins-slave
   spec:
     containers:
       - name: docker
         image: docker
+        volumeMounts:
+          - name: docker-sock-volume
+            mountPath: /var/run/docker.sock
         command:
           - cat
-        tty: true
-      - name: node
-        image: node:8
-        command:
-          - cat
-        tty: true
+            tty: true
+        volumes:
+          - name: docker-sock-volume
+            hostPath:
+            path: /var/run/docker.sock
