--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "scraper",
+  "name": "statements",
   "version": "1.0.0",
-  "description": "Scrape for bank statements",
-  "main": "../app/index.js",
+  "description": "Get bank statements from gmail",
+  "main": "app/Server.js",
   "scripts": {
-    "test": "microservice/node_modules/.bin/mocha --timeout 15000 --recursive ../test",
+    "test": "node_modules/.bin/mocha --timeout 15000 --recursive ../test",
     "start": "node app/Server.js"
   },
   "author": "Joseph Okharedia",
