--- a/k8s-statements.yaml
+++ b/k8s-statements.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: google-app-credentials
 data:
-  google-application-credentials.json: |-
+  google-application-credentials.json: |
     topsecret
 ---
 apiVersion: apps/v1
