add statements service

--- a/k8s-statements.yaml
+++ b/k8s-statements.yaml
@@ -5,6 +5,19 @@ metadata:
 data:
   google-application-credentials.json: topsecret
 ---
+kind: Service
+apiVersion: v1
+metadata:
+  name: statements
+  labels:
+    app: statements
+spec:
+  selector:
+    app: statements
+  ports:
+    - port: 80
+      targetPort: 3000
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
