--- a/k8s-statements.yaml
+++ b/k8s-statements.yaml
@@ -15,8 +15,10 @@ spec:
   selector:
     app: statements
   ports:
-    - port: 80
-      targetPort: 3000
+  - name: http
+    protocol: TCP
+    port: 80
+    targetPort: 3000
 ---
 apiVersion: apps/v1
 kind: Deployment
