--- a/k8s-statements.yaml
+++ b/k8s-statements.yaml
@@ -3,7 +3,8 @@ kind: ConfigMap
 metadata:
   name: google-app-credentials
 data:
-  google-application-credentials.json: topsecret
+  google-application-credentials.json: |
+    topsecret
 ---
 kind: Service
 apiVersion: v1
